Fix content being cut off on iPad

--- a/assets/www/app.css
+++ b/assets/www/app.css
@@ -550,6 +550,9 @@ body[dir=rtl] #settingsList .item select {
 		text-align: right;
 		background: -webkit-gradient(linear, left top, left bottom, from(#5F5F5F), to(#4F4F4F));
 	}
+	#content.scroller {
+		bottom: 0px;
+	}
 	.goodscroll #content {
 		position: absolute;
 		width: auto;
